# epid_model

./: Cargo.toml  README.md
src/: epid_sample.rs  index.html  individual.rs  main.rs  server.rs  static_server.rs
static/: index.html
