[package]
name = "epid_model"
version = "0.1.0"
authors = ["iyuroch <iyuroch@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
actix = "0.7.9"
actix-web = "0.7.18"
env_logger = "0.6.0"
mime = "0.3.13"
serde = "1.0.87"
serde_derive = "1.0.87"
rayon = "1.0.3"
futures = "0.1.25"
tokio = "0.1.16"
tokio-threadpool = "0.1.12"
tokio-tungstenite = "0.6.0"
tungstenite = "0.6.1"
tokio-fs = "0.1.6"
tokio-sync = "0.1.3"
